<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainLoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                android:background="#00ff0000"
                android:id="@+id/back_login"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_gravity="start"
                android:includeFontPadding="false"
                android:textSize="30sp"
                android:textColor="@color/little_dark_grey"
                android:text="@string/login_text"
                android:fontFamily="@font/notosanskrbold">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_idbox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_gravity="center"
                android:hint="@string/hint_id"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:textColor="@color/default_color"
                android:backgroundTint="@color/default_color"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosanskrthin"/>

            <EditText
                android:id="@+id/login_pwbox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:textColor="@color/default_color"
                android:backgroundTint="@color/default_color"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosanskrthin"
                android:layout_marginTop="30dp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_round"
                android:fontFamily="@font/notosanskrmedium"
                android:includeFontPadding="false"
                android:text="@string/login_text"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/go_fpassword_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/notosanskrlight"
                android:includeFontPadding="false"
                android:text="@string/go_password_get"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/return_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/go_fpassword_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/notosanskrlight"
                android:includeFontPadding="false"
                android:text="@string/go_singup_activity"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

