<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainSignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                android:backgroundTint="#00ff0000"
                android:id="@+id/back_signup"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:text="@string/signup"
                android:textSize="30sp"
                android:textColor="@color/little_dark_grey"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosanskrmedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_name"
                android:textSize="14sp"
                android:textColor="@color/default_color"
                android:layout_marginStart="56dp"
                android:layout_marginTop="10dp"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosanskrlight"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_name"
                android:id="@+id/signup_name"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:textColor="@color/default_color"
                android:backgroundTint="@color/default_color"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosanskrthin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_phone"
                android:textSize="14sp"
                android:textColor="@color/default_color"
                android:layout_marginStart="56dp"
                android:layout_marginTop="10dp"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosanskrlight"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_phone"
                android:id="@+id/signup_phone"
                android:inputType="phone"
                android:textSize="16sp"
                android:textColor="@color/default_color"
                android:backgroundTint="@color/default_color"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosanskrthin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_email"
                android:textSize="14sp"
                android:textColor="@color/default_color"
                android:layout_marginStart="56dp"
                android:layout_marginTop="10dp"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosanskrlight"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_email"
                android:id="@+id/signup_email"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:textColor="@color/default_color"
                android:backgroundTint="@color/default_color"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosanskrthin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_id"
                android:textSize="14sp"
                android:textColor="@color/default_color"
                android:layout_marginStart="56dp"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosanskrlight"/>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:hint="@string/hint_id"
                    android:id="@+id/signup_id"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    android:textColor="@color/default_color"
                    android:backgroundTint="@color/default_color"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/notosanskrthin"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/check_id"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_round_white"
                    android:text="@string/check_con"
                    android:textSize="14sp"
                    android:textColor="@color/default_color"
                    android:lineSpacingExtra="-5dp"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/notosanskrmedium"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_password"
                android:textSize="14sp"
                android:textColor="@color/default_color"
                android:layout_marginStart="56dp"
                android:layout_marginTop="10dp"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosanskrlight"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_password"
                android:id="@+id/signup_password"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:textColor="@color/default_color"
                android:backgroundTint="@color/default_color"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosanskrthin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_confirm_pw"
                android:textColor="@color/default_color"
                android:textSize="14sp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="10dp"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosanskrlight"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_password"
                android:id="@+id/confirm_pwbox"
                android:inputType="textPassword"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosanskrthin"
                android:textSize="16sp"
                android:textColor="@color/default_color"
                android:backgroundTint="@color/default_color"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/button_round_white"
                android:text="@string/signup"
                android:textSize="16sp"
                android:textColor="@color/default_color"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:id="@+id/signup_button"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosanskrmedium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/go_to_login"
                android:textSize="14sp"
                android:textColor="@color/default_color"
                android:layout_below="@id/signup_button"
                android:layout_marginTop="25dp"
                android:id="@+id/go_login_txt"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosanskrlight"/>

        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>